--- a/front-end/src/app/pages/detail/detail.component.html
+++ b/front-end/src/app/pages/detail/detail.component.html
@@ -13,10 +13,10 @@
 <mat-card *ngFor="let item of paciente" style="margin-top: 30px;">
   <mat-card-header>
     <mat-card-title>nome: {{item.nomePaciente}}</mat-card-title>
-    <mat-card-title>cpf: {{item.cpf}}</mat-card-title>
-    <mat-card-title>data de nascimento: {{item.dtNascimento}}</mat-card-title>
-    <mat-card-title>telefone: {{item.telefone}}</mat-card-title>
-    <mat-card-subtitle>email:{{item.email}}</mat-card-subtitle>
+    <mat-card-subtitle>cpf: {{item.cpf}}</mat-card-subtitle>
+    <mat-card-subtitle>data de nascimento: {{item.dtNascimento}}</mat-card-subtitle>
+    <mat-card-subtitle>telefone: {{item.telefone}}</mat-card-subtitle>
+    <mat-card-subtitle>email: {{item.email}}</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content style="margin: 25px 0 25px 0;">
   </mat-card-content>
